# pycheval

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  messages.pot  pyproject.toml  release.sh
.github/: dependabot.yml
.github/workflows/: test-and-lint.yml
src/pycheval/: __init__.py  _locale.py  _test_data.py  const.py  exc.py  format.py  generate.py  model.py  money.py  parse.py  pdf_common.py  pdf_embed.py  pdf_extract.py  pdf_parse.py  quantities.py  test_generate.py  test_model.py  test_parse.py  type_codes.py  types.py
src/pycheval/locale/de/LC_MESSAGES/: pycheval.po
src/pycheval/test_data/: BASIC-WL_Preceding_Invoice.xml  EN16931_Billing_Period.xml  EN16931_Rechnungskorrektur.xml  README.md  __init__.py
