[tool.poetry]
name = "PyCheval"
version = "0.1.0"
description = "Factur-X/ZUGFeRD parsing and generation library for Python"
authors = ["Sebastian Rittau <sebastian.rittau@zfutura.de>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/zfutura/pycheval"
keywords = ["factur-x", "zugferd", "invoice", "billing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: File Formats",
    "Topic :: Office/Business :: Financial :: Accounting",
]
include = [{ path = "src/pycheval/locale/**/*.mo", format = ["wheel"] }]
exclude = ["src/pycheval/test_*"]

[tool.poetry.dependencies]
python = "^3.11"
pypdf = "^5.4.0"

[tool.poetry.group.dev.dependencies]
babel = "~=2.17.0"
mypy = "~=1.15.0"
poethepoet = "^0.34.0"
pytest = "^8.3.5"
ruff = "^0.11.7"

[tool.poe.tasks]
i18n-extract = "pybabel extract -o messages.pot src"
i18n-init = "pybabel init -D pycheval -i messages.pot -d src/pycheval/locale -l "
i18n-update = "pybabel update -D pycheval -i messages.pot -d src/pycheval/locale"
i18n-compile = "pybabel compile -D pycheval -d src/pycheval/locale"
lint = "ruff check src"
test = "pytest src"
typecheck = "mypy src"

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
