[project]
name = "PyCheval"
version = "0.3.0"
description = "Factur-X/ZUGFeRD parsing and generation library for Python"
authors = [{ name = "Sebastian Rittau", email = "sebastian.rittau@zfutura.de" }]
readme = "README.md"
license = "Apache-2.0"
keywords = ["factur-x", "zugferd", "invoice", "billing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: File Formats",
    "Topic :: Office/Business :: Financial :: Accounting",
]
requires-python = ">= 3.11"
dependencies = [
    "pypdf >= 6.1.1, < 7",
]

[project.urls]
GitHub = "https://github.com/zfutura/pycheval"

[dependency-groups]
dev = [
    "babel >= 2.17.0, < 3",
    "mypy ~= 1.18.2",
    "poethepoet ~= 0.37.0",
    "pytest >= 8.4.2, < 9",
    "ruff ~= 0.14.0",
]

[tool.poetry]
include = [{ path = "src/pycheval/locale/**/*.mo", format = ["sdist", "wheel"] }]
exclude = ["src/pycheval/test_*"]

[tool.poe.tasks.lint]
cmd = "ruff check src"
help = "Lint the source code with ruff"

[tool.poe.tasks.test]
cmd = "pytest src"
help = "Run unit and integration tests with pytest"

[tool.poe.tasks.typecheck]
cmd = "mypy src"
help = "Type check the source code with mypy"

[tool.poe.tasks.i18n-extract]
cmd = "pybabel extract -o messages.pot src"
help = "Extract messages for translation"

[tool.poe.tasks.i18n-init]
cmd = "pybabel init -D pycheval -i messages.pot -d src/pycheval/locale -l "
help = "Initialize translation files for a new language"

[tool.poe.tasks.i18n-update]
cmd = "pybabel update -D pycheval -i messages.pot -d src/pycheval/locale"
help = "Update translation files from the template"

[tool.poe.tasks.i18n-compile]
cmd = "pybabel compile -D pycheval -d src/pycheval/locale"
help = "Compile translation files"

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
